# opencv-laboratory

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  ShowImage.cpp
Samples/: Samples.sdf  Samples.sln
Samples/Debug/: Laboratory.ilk  Mat.ilk
Samples/Laboratory/: Laboratory.cpp  Laboratory.vcxproj  Laboratory.vcxproj.filters  LaboratoryApplication.cpp  LaboratoryApplication.h  ReadMe.txt  stdafx.cpp
Samples/Laboratory/Debug/: CL.read.1.tlog  CL.write.1.tlog  Laboratory.lastbuildstate  Laboratory.pch  Laboratory_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  vc100.idb  (+3 more)
Samples/Mat/: Mat.cpp  Mat.vcxproj  Mat.vcxproj.filters  NegativeView.cpp  NegativeView.h  ReadMe.txt  stdafx.cpp
Samples/OpenCV-Debug/: ShowImage.ilk
Samples/ShowImage/: ReadMe.txt  ShowImage.cpp  ShowImage.vcxproj  ShowImage.vcxproj.filters  stdafx.cpp
examples/: quad-segmentation.cpp
samples/dimensions/: rectangles.txt
src/: Application.cpp  Application.h  ApplicationActions.cpp  ApplicationActions.h  CMakeLists.txt  FileImageSource.cpp  FileImageSource.h  ImageSource.cpp  ImageSource.h  ImageSourceView.cpp  ImageSourceView.h  MainMenu.cpp  MainMenu.h  Perspective.cpp  Perspective.h
src/dim/: CanonicalDimCounter.cpp  FastDimCounter.cpp  FastDimCounter.h
src/edge/: SobelEdgeDetector.cpp  SobelEdgeDetector.h
src/histograms/: DIMHistogram.cpp  DIMHistogram.h  FastDIMHistogram.cpp  FastDIMHistogram.h  HSLHistogram.cpp  HSLHistogram.h  Histogram.cpp  Histogram.h  RGBHistogram.cpp  RGBHistogram.h
(+41 files in other folders)
